# oxymake

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  OXYMAKE-THESIS.md  README.md  RELEASING.md  SECURITY.md  STATUS.md  deny.toml  justfile  lefthook.yml  wrangler.toml
.cosmon/: artifact-map.toml
.github/: CODEOWNERS
baselines/: demo.sha256
bench/: compare.sh
benchmark/: Justfile  Oxymakefile.toml  README.md  Snakefile
crates/ox-api/: Cargo.toml
crates/ox-api/src/: builder.rs  discover.rs  error.rs  lib.rs  run.rs
crates/ox-api/tests/: target_resolution.rs
crates/ox-cache/: Cargo.toml
crates/ox-cache-remote/: Cargo.toml
crates/ox-cache-remote/src/: directory.rs  gcs.rs  lib.rs  s3.rs
crates/ox-cache/src/: error.rs  hash.rs  key.rs  lib.rs  lookup.rs  materialization.rs  strategy.rs
crates/ox-cli/: Cargo.toml
crates/ox-cli/src/: lib.rs  main.rs
crates/ox-cli/src/commands/: cancel.rs  check_consistency.rs  clean.rs  common.rs  dag.rs  dashboard.rs  explain.rs  export.rs  gate.rs  guide.rs  history.rs  init.rs  invalidate.rs  lint.rs  lock.rs  logo.rs  logs.rs  mod.rs  plan.rs  query.rs  run.rs  serve.rs  snapshot.rs  status.rs  stubs.rs  subscribe.rs  test.rs  translate.rs
crates/ox-cli/tests/: cli.rs  doc_transcript_golden.rs  stateless_mtime.rs  ux_baseline.rs
crates/ox-codec-core/: Cargo.toml
crates/ox-codec-core/src/: codec.rs  error.rs  json.rs  lib.rs  registry.rs
crates/ox-core/: Cargo.toml  MUTATION-REPORT.md
crates/ox-core/benches/: dispatch_lock.rs  scheduler_micro.rs
crates/ox-core/proptest-regressions/: model.txt
crates/ox-core/src/: dag.rs  disk_writer.rs  error.rs  event.rs  hashing.rs  job_graph.rs  lib.rs  memory_map.rs  model.rs  resolver.rs  scheduler.rs  wildcard.rs
crates/ox-core/src/traits/: benchmark.rs  cache.rs  environment.rs  executor.rs  format_codec.rs  gate.rs  materialization.rs  mod.rs  optimization.rs  remote_cache.rs  reporter.rs  storage.rs
crates/ox-core/tests/: petri_net_axioms.rs  scheduler_throughput.rs  separable_axes.rs  stress_scheduler.rs
crates/ox-dashboard/: Cargo.toml
crates/ox-dashboard/src/: api.rs  lib.rs  main.rs  server.rs
crates/ox-dashboard/templates/: index.html
crates/ox-env-system/: Cargo.toml
crates/ox-env-system/src/: error.rs  lib.rs  system.rs
crates/ox-env-uv/: Cargo.toml
crates/ox-env-uv/src/: error.rs  lib.rs  resolve.rs  venv.rs
crates/ox-exec-local/: Cargo.toml
crates/ox-exec-local/src/: call_mode.rs  error.rs  executor.rs  lib.rs  process.rs  run_preamble.rs  worker_pool.rs
crates/ox-exec-local/src/templates/: warm_worker.py
crates/ox-exec-local/tests/: integration.rs  worker_pool_fault_injection.rs
crates/ox-exec-ray/: Cargo.toml
crates/ox-exec-ray/src/: autoscaler.rs  call_mode.rs  dashboard.rs  driver_script.rs  error.rs  executor.rs  job_array.rs  lib.rs  object_store.rs  placement_group.rs  ray_client.rs  resource_mapper.rs  runtime_env.rs
crates/ox-exec-ray/tests/: exhaustive_ray_tests.rs  wiremock_tests.rs
crates/ox-exec-slurm/: Cargo.toml
crates/ox-exec-slurm/src/: error.rs  executor.rs  job_array.rs  job_script.rs  lib.rs  resource_mapper.rs  slurm_cli.rs  slurm_rest.rs  status_parser.rs
crates/ox-format/: Cargo.toml
crates/ox-format/src/: error.rs  lib.rs  parse.rs  targets.rs  validate.rs
crates/ox-format/src/snapshots/: ox_format__parse__tests__parse_genomics_fixture.snap  ox_format__parse__tests__parse_simple_fixture.snap
crates/ox-lock/: Cargo.toml
crates/ox-lock/src/: error.rs  lib.rs  model.rs  verify.rs  writer.rs
crates/ox-mcp/: Cargo.toml
crates/ox-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/ox-metrics/: Cargo.toml
crates/ox-metrics/src/: lib.rs  metrics.rs  server.rs
crates/ox-monitor-tui/: Cargo.toml
crates/ox-monitor-tui/src/: app.rs  format.rs  lib.rs  main.rs  ui.rs
crates/ox-plan/: Cargo.toml
crates/ox-plan/src/: critical_path.rs  error.rs  lib.rs  partition.rs  pass.rs  prune.rs
crates/ox-render/: Cargo.toml
crates/ox-render/src/: lib.rs
crates/ox-report-json/: Cargo.toml
crates/ox-report-json/src/: error.rs  lib.rs  reporter.rs  schema.rs
crates/ox-report-term/: Cargo.toml
crates/ox-report-term/src/: error.rs  format.rs  lib.rs  reporter.rs
crates/ox-state/: Cargo.toml
crates/ox-state/src/: backend.rs  db.rs  error.rs  lib.rs  migration.rs  session.rs
crates/ox-state/tests/: cooperative_sessions.rs  exactly_once_terminal.rs  fault_injection.rs  proptest_cancel_vs_complete.rs
crates/ox-storage-local/: Cargo.toml
crates/ox-storage-local/src/: error.rs  lib.rs  local.rs
crates/ox-translate/: Cargo.toml
crates/ox-translate/src/: export.rs  ir.rs  lib.rs
crates/ox-translate/src/oxymake/: generator.rs
crates/ox-translate/src/snakemake/: configfile.rs  generator.rs  mod.rs  parser.rs
crates/ox-translate/src/wdl/: generator.rs  parser.rs
crates/ox-translate/tests/: round_trip.rs
crates/ox-translate/tests/fixtures/bio/: Snakefile
crates/ox-translate/tests/fixtures/log/: Snakefile
crates/ox-translate/tests/fixtures/multi_env/: Snakefile
crates/ox-translate/tests/fixtures/params/: Snakefile
crates/ox-translate/tests/fixtures/python/: Snakefile
crates/ox-translate/tests/fixtures/resources/: Snakefile
crates/ox-translate/tests/fixtures/script/: Snakefile
crates/ox-translate/tests/fixtures/simple/: Snakefile
crates/ox-translate/tests/fixtures/wildcard_constraints/: Snakefile
crates/oxymake/: Cargo.toml  README.md
crates/oxymake/src/: lib.rs
docs/: AUDIT-REPORT.md  FAIR-ALIGNMENT.md  FUNCTIONAL-TEST-REPORT.md  GLOSSARY.md  HIBERNATION.md  LAUNCH-SEQUENCE.md  MAKING-OF.md  RELEASE-CHECKLIST.md  RETURNING.md  WEBDOCS.md  benchmark-tutorial.md  issues-day1.md
examples/: guided-tour.sh  justfile
metrics/: metrics.json
packaging/: RESERVE-NAMES.md
packaging/pypi/: README.md  oxymake_launcher.py  pyproject.toml
scripts/: adr-lint.py  apply-branch-protection.sh  artifact-map-audit.py  chaos.sh  re-warm.sh  regenerate-metrics.sh  regenerate-readme-metrics.py  (+3 more)
(+286 files in other folders)
