[package]
name = "ox-codec-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FormatCodec trait and built-in codecs (JSON, CSV, Parquet stubs)"

[dependencies]
ox-core = { path = "../ox-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
