[package]
name = "ox-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, DAG, scheduler, and traits for OxyMake"

[dependencies]
petgraph.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt", "macros", "fs", "io-util"] }
ordered-float.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "fs", "test-util"] }
proptest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "scheduler_micro"
harness = false

[[bench]]
name = "dispatch_lock"
harness = false
