[package]
name = "ox-dashboard"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Web dashboard for OxyMake workflow monitoring and DAG visualization"

[dependencies]
ox-core = { path = "../ox-core" }
ox-state = { path = "../ox-state" }
axum = "0.8"
tokio = { workspace = true, features = ["net", "macros", "rt", "rt-multi-thread", "time"] }
serde.workspace = true
serde_json.workspace = true
tower-http = { version = "0.6", features = ["fs", "cors"] }
askama = "0.12"
tokio-stream = "0.1"

[dev-dependencies]
tempfile.workspace = true
tower = "0.5"
