[package]
name = "ox-env-system"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "System environment provider — no isolation, uses host PATH directly"

[dependencies]
ox-core = { path = "../ox-core" }
thiserror.workspace = true

[dev-dependencies]
