[package]
name = "ox-exec-ray"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ray executor — submits jobs to Ray clusters via the Ray Jobs API"

[features]
# Enable integration tests against a real Ray cluster.
ray-integration = []

[dependencies]
ox-core = { path = "../ox-core" }
ox-codec-core = { path = "../ox-codec-core" }
tokio = { workspace = true, features = ["sync", "fs", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
wiremock = "0.6"
