[package]
name = "ox-exec-slurm"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SLURM executor — submits jobs to SLURM clusters via sbatch"

[features]
# Enable integration tests against a real SLURM cluster (Docker).
slurm-integration = []

[dependencies]
ox-core = { path = "../ox-core" }
tokio = { workspace = true, features = ["sync", "fs", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
wiremock = "0.6"
