[package]
name = "ox-format"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Oxymakefile.toml parser — turns TOML into Vec<Rule>"

[dependencies]
ox-core = { path = "../ox-core" }
toml.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
