[package]
name = "ox-lock"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reproducibility lockfile — captures exact workflow state for drift detection"

[dependencies]
ox-core = { path = "../ox-core" }
blake3.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
