[package]
name = "ox-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for OxyMake"

[dependencies]
ox-core = { path = "../ox-core" }
ox-format = { path = "../ox-format" }
ox-state = { path = "../ox-state" }
ox-cache = { path = "../ox-cache" }
ox-plan = { path = "../ox-plan" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
