[package]
name = "ox-report-json"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NDJSON reporter — machine-readable build events for agents and CI"

[dependencies]
ox-core = { path = "../ox-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
