[package]
name = "ox-state"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite persistence layer — sessions, build history, schema migrations"

[dependencies]
ox-core = { path = "../ox-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
libc.workspace = true
