[package]
name = "ox-translate"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Workflow format translator — parse Snakemake and WDL into IR and generate Oxymakefile.toml (and vice versa)"

[dependencies]
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
serde_yaml_ng.workspace = true
anyhow.workspace = true
ox-format = { path = "../ox-format" }
ox-core = { path = "../ox-core" }
